syntax = "proto3";

import "auth_status.proto";
import "onboarding_status.proto";

option java_package = "bob.colbaskin.umirhack7.datastore";
option java_multiple_files = true;

message UserPreferencesProto {
  OnboardingStatus onboardingStatus = 1;
  AuthStatus authStatus = 2;
  string userId = 3;
  string username = 4;
  string email = 5;
  string firstName = 6;
  string lastName = 7;
}
